--- a/src/main/resources/templates/football.html
+++ b/src/main/resources/templates/football.html
@@ -34,156 +34,156 @@
 
 <body>
 
-  <div class="site-wrap">
+<div class="site-wrap">
 
-    <div class="site-mobile-menu site-navbar-target">
-      <div class="site-mobile-menu-header">
-        <div class="site-mobile-menu-close">
-          <span class="icon-close2 js-menu-toggle"></span>
-        </div>
-      </div>
-      <div class="site-mobile-menu-body"></div>
-    </div>
-
-
-    <header class="site-navbar py-4" role="banner">
-
-      <div class="container">
-        <div class="d-flex align-items-center">
-          <div class="site-logo">
-            <a href="/#">
-              <img src="images/SOCCER.png" alt="Logo">
-            </a>
-          </div>
-          <div class="ml-auto">
-            <nav class="site-navigation position-relative text-right" role="navigation">
-              <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-			  <li class="active"><a th:href="@{/}" class="nav-link">Home</a></li>
-                <li><a th:href="@{football.html}" class="nav-link">Football</a></li>
-                <li><a th:href="@{basketball.html}" class="nav-link">Basketball</a></li>
-                <li><a th:href="@{volleyball.html}" class="nav-link">Volleyball</a></li>
-                <li><a th:href="@{contact.html}" class="nav-link">Contact</a></li>
-              </ul>
-            </nav>
-
-            <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right text-white"><span
-                class="icon-menu h3 text-white"></span></a>
-          </div>
-        </div>
-      </div>
-
-    </header>
-
-    <div class="hero overlay" style="background-image: url('images/bg_3.jpg');">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-5 ml-auto">
-            <h1 class="text-white">Football Tournaments Schedule</h1>
-            <p>Find Upcomming Football matches schedule and live matches scoors here.</p>
-			<p id="date"></p>
-          </div>
-        </div>
+  <div class="site-mobile-menu site-navbar-target">
+    <div class="site-mobile-menu-header">
+      <div class="site-mobile-menu-close">
+        <span class="icon-close2 js-menu-toggle"></span>
       </div>
     </div>
+    <div class="site-mobile-menu-body"></div>
+  </div>
 
-    
-    
+
+  <header class="site-navbar py-4" role="banner">
+
     <div class="container">
-      
+      <div class="d-flex align-items-center">
+        <div class="site-logo">
+          <a href="index.html">
+            <img src="images/logo.png" alt="Logo" width="100" height="100">
+          </a>
+        </div>
+        <div class="ml-auto">
+          <nav class="site-navigation position-relative text-right" role="navigation">
+            <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
+              <li class="active"><a th:href="@{/}" class="nav-link">Home</a></li>
+              <li><a th:href="@{football.html}" class="nav-link">Football</a></li>
+              <li><a th:href="@{basketball.html}" class="nav-link">Basketball</a></li>
+              <li><a th:href="@{vollyball.html}" class="nav-link">Vollyball</a></li>
+              <li><a th:href="@{contact.html}" class="nav-link">Contact</a></li>
+            </ul>
+          </nav>
 
-      <div class="row">
-        <div class="col-lg-12">
-          
-          <div class="d-flex team-vs">
-            <span class="score">4-1</span>
-            <div class="team-1 w-50">
-              <div class="team-details w-100 text-center">
-                <img src="images/logo_1.png" alt="Image" class="img-fluid">
-                <h3>LA LEGA <span>(win)</span></h3>
-                <ul class="list-unstyled">
-                  <li>Anja Landry (7)</li>
-                  <li>Eadie Salinas (12)</li>
-                  <li>Ashton Allen (10)</li>
-                  <li>Baxter Metcalfe (5)</li>
-                </ul>
-              </div>
+          <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right text-white"><span
+                  class="icon-menu h3 text-white"></span></a>
+        </div>
+      </div>
+    </div>
+
+  </header>
+
+  <div class="hero overlay" style="background-image: url('images/bg_3.jpg');">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-5 ml-auto">
+          <h1 class="text-white">Football Tournaments Schedule</h1>
+          <p>Find Upcomming Football matches schedule and live matches scoors here.</p>
+          <p id="date"></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="container">
+
+
+    <div class="row">
+      <div class="col-lg-12">
+
+        <div class="d-flex team-vs">
+          <span class="score">4-1</span>
+          <div class="team-1 w-50">
+            <div class="team-details w-100 text-center">
+              <img src="images/logo_1.png" alt="Image" class="img-fluid">
+              <h3>LA LEGA <span>(win)</span></h3>
+              <ul class="list-unstyled">
+                <li>Anja Landry (7)</li>
+                <li>Eadie Salinas (12)</li>
+                <li>Ashton Allen (10)</li>
+                <li>Baxter Metcalfe (5)</li>
+              </ul>
             </div>
-            <div class="team-2 w-50">
-              <div class="team-details w-100 text-center">
-                <img src="images/logo_2.png" alt="Image" class="img-fluid">
-                <h3>JUVENDU <span>(loss)</span></h3>
-                <ul class="list-unstyled">
-                  <li>Macauly Green (3)</li>
-                  <li>Arham Stark (8)</li>
-                  <li>Stephan Murillo (9)</li>
-                  <li>Ned Ritter (5)</li>
-                </ul>
-              </div>
+          </div>
+          <div class="team-2 w-50">
+            <div class="team-details w-100 text-center">
+              <img src="images/logo_2.png" alt="Image" class="img-fluid">
+              <h3>JUVENDU <span>(loss)</span></h3>
+              <ul class="list-unstyled">
+                <li>Macauly Green (3)</li>
+                <li>Arham Stark (8)</li>
+                <li>Stephan Murillo (9)</li>
+                <li>Ned Ritter (5)</li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
     </div>
-  
+  </div>
 
-    
-    <div class="site-section bg-dark">
-      <div class="container">
-        
-        <div class="row mb-5">
-          <div class="col-lg-12">
-            <div class="widget-next-match">
-              <div class="widget-title">
-                <h3>Next Match</h3>
-              </div>
-              <div class="widget-body mb-3">
-                <div class="widget-vs">
-                  <div class="d-flex align-items-center justify-content-around justify-content-between w-100">
-                    <div class="team-1 text-center">
-                      <img src="images/logo_1.png" alt="Image">
-                      <h3>[[${nextMatch.teamA}]]</h3>
-                    </div>
-                    <div>
-                      <span class="vs"><span>VS</span></span>
-                    </div>
-                    <div class="team-2 text-center">
-                      <img src="images/logo_2.png" alt="Image">
-                      <h3>[[${nextMatch.teamB}]]</h3>
-                    </div>
+
+
+  <div class="site-section bg-dark">
+    <div class="container">
+
+      <div class="row mb-5">
+        <div class="col-lg-12">
+          <div class="widget-next-match">
+            <div class="widget-title">
+              <h3>Next Match</h3>
+            </div>
+            <div class="widget-body mb-3">
+              <div class="widget-vs">
+                <div class="d-flex align-items-center justify-content-around justify-content-between w-100">
+                  <div class="team-1 text-center">
+                    <img src="images/logo_1.png" alt="Image">
+                    <h3>[[${nextMatch.teamA}]]</h3>
+                  </div>
+                  <div>
+                    <span class="vs"><span>VS</span></span>
+                  </div>
+                  <div class="team-2 text-center">
+                    <img src="images/logo_2.png" alt="Image">
+                    <h3>[[${nextMatch.teamB}]]</h3>
                   </div>
                 </div>
               </div>
+            </div>
 
-              <div class="text-center widget-vs-contents mb-4">
-                <h4>World Cup League</h4>
-                <p class="mb-5">
-                  <span class="d-block">[[${nextMatch.date}]]</span>
-                  <span class="d-block">[[${nextMatch.time}]]</span>
-                  <strong class="text-primary">New Euro Arena</strong>
-                </p>
-
-                <h3>[[${time}]]</h3>
-              </div>
+            <div class="text-center widget-vs-contents mb-4">
+              <h4>[[${nextMatch.league}]]</h4>
+              <p class="mb-5">
+                <span class="d-block">[[${nextMatch.date}]]</span>
+                <span class="d-block">[[${nextMatch.time}]]</span>
+                <strong class="text-primary">[[${nextMatch.ground}]]</strong>
+              </p>
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="row">
-          <div class="col-12 title-section">
-            <h2 class="heading">Upcoming Match</h2>
-          </div>
-            
-          <div class="col-lg-12">
-		  <div class="bg-light p-4 rounded">
-            
+      <div class="row">
+        <div class="col-12 title-section">
+          <h2 class="heading">Upcoming Match</h2>
+        </div>
+
+        <div class="col-lg-12">
+          <div class="bg-light p-4 rounded">
+
             <div class="widget-next-match">
               <table class="table custom-table">
                 <thead>
                 <tr>
                   <th scope="col">Team A</th>
                   <th scope="col">Team B</th>
-                  <th scope="col">Match Date</th>
-                  <th scope="col">Match Timing</th>
+                  <th scope="col">Date</th>
+                  <th scope="col">Time</th>
+                  <th scope="col">Ground</th>
+                  <th scope="col">League</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -192,18 +192,20 @@
                   <td th:text="${match.teamB}"/>
                   <td th:text="${match.date}"/>
                   <td th:text="${match.time}"/>
+                  <td th:text="${match.ground}"/>
+                  <td th:text="${match.league}"/>
                 </tr>
                 </tbody>
               </table>
-            </div>			
+            </div>
           </div>
-		  </div>
-		</div>
+        </div>
+      </div>
     </div> <!-- .site-section -->
-	</div>
-	<footer class="footer-section" style="margin: 0px; padding: 0px;">
-      <div class="bg-light p-4">
-	  <div class="container">
+  </div>
+  <footer class="footer-section" style="margin: 0px; padding: 0px;">
+    <div class="bg-light p-4">
+      <div class="container">
 
         <div class="row text-center">
           <div class="col-md-12">
@@ -221,11 +223,11 @@
 
         </div>
       </div>
-    </footer>
-  </div>
-  
-  <!-- .site-wrap -->
-  <script >
+  </footer>
+</div>
+
+<!-- .site-wrap -->
+<script >
 window.onload = setInterval(clock,1000);
 function clock()
 {
@@ -239,23 +241,23 @@ function clock()
 }
 </script>
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/jquery.countdown.min.js"></script>
-  <script src="js/bootstrap-datepicker.min.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/jquery.sticky.js"></script>
-  <script src="js/jquery.mb.YTPlayer.min.js"></script>
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/jquery-migrate-3.0.1.min.js"></script>
+<script src="js/jquery-ui.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.stellar.min.js"></script>
+<script src="js/jquery.countdown.min.js"></script>
+<script src="js/bootstrap-datepicker.min.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+<script src="js/aos.js"></script>
+<script src="js/jquery.fancybox.min.js"></script>
+<script src="js/jquery.sticky.js"></script>
+<script src="js/jquery.mb.YTPlayer.min.js"></script>
 
 
-  <script src="js/main.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 
