--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,7 +53,7 @@
             <div class="d-flex align-items-center">
                 <div class="site-logo">
                     <a href="index.html">
-                        <img src="images/SOCCER.png" alt="Logo">
+                        <img src="images/logo.png" alt="Logo" width="100" height="100">
                     </a>
                 </div>
                 <div class="ml-auto">
@@ -110,6 +110,7 @@
             </div>
         </div>
     </div>
+
 
     <div class="site-section bg-dark">
         <div class="container">
