--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,68 +34,68 @@
 
 <body>
 
-  <div class="site-wrap">
+<div class="site-wrap">
 
-    <div class="site-mobile-menu site-navbar-target">
-      <div class="site-mobile-menu-header">
-        <div class="site-mobile-menu-close">
-          <span class="icon-close2 js-menu-toggle"></span>
-        </div>
+  <div class="site-mobile-menu site-navbar-target">
+    <div class="site-mobile-menu-header">
+      <div class="site-mobile-menu-close">
+        <span class="icon-close2 js-menu-toggle"></span>
       </div>
-      <div class="site-mobile-menu-body"></div>
     </div>
+    <div class="site-mobile-menu-body"></div>
+  </div>
 
 
-    <header class="site-navbar py-4" role="banner">
+  <header class="site-navbar py-4" role="banner">
 
-      <div class="container">
-        <div class="d-flex align-items-center">
-          <div class="site-logo">
-            <a href="index.html">
-              <img src="images/logo.png" alt="Logo">
-            </a>
-          </div>
-                  </div>
-      </div>
-
-    </header>
-
-    <div class="hero overlay" style="background-image: url('images/admin.jpg');">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-9 mx-auto text-center">
-            <h1 class="text-white">Login</h1>
-          </div>
+    <div class="container">
+      <div class="d-flex align-items-center">
+        <div class="site-logo">
+          <a href="index.html">
+            <img src="images/logo.png" alt="Logo">
+          </a>
         </div>
       </div>
     </div>
 
-    
-    <div class="site-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-7">
-            <form action="#">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Name">
-              </div>
-              <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password">
-              </div>
-              <div class="form-group">
-                <input type="submit" class="btn btn-primary py-3 px-5" value="Admin Login">
-              </div>
-            </form>  
-          </div>
-          
+  </header>
+
+  <div class="hero overlay" style="background-image: url('images/admin.jpg');">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-9 mx-auto text-center">
+          <h1 class="text-white">Login</h1>
         </div>
       </div>
     </div>
+  </div>
 
 
-    <footer class="footer-section" style="margin: 0px; padding: 0px;">
-      <div class="col-lg-12 p-4">
-	  <div class="container">
+  <div class="site-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-7">
+          <form action="#" th:action="@{/wp-admin-1234footballadmin}" method="post" th:object="${admin}">
+            <div class="form-group">
+              <input type="text" th:field="*{userName}" class="form-control" placeholder="Name">
+            </div>
+            <div class="form-group">
+              <input type="password" th:field="*{password}" class="form-control" placeholder="Password">
+            </div>
+            <div class="form-group">
+              <input type="submit" class="btn btn-primary py-3 px-5" value="Login">
+            </div>
+          </form>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
+  <footer class="footer-section" style="margin: 0px; padding: 0px;">
+    <div class="col-lg-12 p-4">
+      <div class="container">
 
         <div class="row text-center">
           <div class="col-md-12">
@@ -113,30 +113,30 @@
 
         </div>
       </div>
-    </footer>
+  </footer>
 
 
 
-  </div>
-  <!-- .site-wrap -->
+</div>
+<!-- .site-wrap -->
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/jquery.countdown.min.js"></script>
-  <script src="js/bootstrap-datepicker.min.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/jquery.sticky.js"></script>
-  <script src="js/jquery.mb.YTPlayer.min.js"></script>
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/jquery-migrate-3.0.1.min.js"></script>
+<script src="js/jquery-ui.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.stellar.min.js"></script>
+<script src="js/jquery.countdown.min.js"></script>
+<script src="js/bootstrap-datepicker.min.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+<script src="js/aos.js"></script>
+<script src="js/jquery.fancybox.min.js"></script>
+<script src="js/jquery.sticky.js"></script>
+<script src="js/jquery.mb.YTPlayer.min.js"></script>
 
 
-  <script src="js/main.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 
