--- a/src/main/resources/templates/wp-admin-1234footballadmin.html
+++ b/src/main/resources/templates/wp-admin-1234footballadmin.html
@@ -31,6 +31,8 @@
 
 
 </head>
+
+
 <body>
 
 <div class="site-wrap">
@@ -51,23 +53,10 @@
       <div class="d-flex align-items-center">
         <div class="site-logo">
           <a href="index.html">
-            <img src="images/logo.png" alt="Logo" width="100" height="100">
+            <img src="images/logo.png" alt="Logo">
           </a>
         </div>
-        <div class="ml-auto">
-          <nav class="site-navigation position-relative text-right" role="navigation">
-            <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-              <li><a th:href="@{/}" class="nav-link">Home</a></li>
-              <li><a th:href="@{football.html}" class="nav-link">Football</a></li>
-              <li><a th:href="@{basketball.html}" class="nav-link">Basketball</a></li>
-              <li><a th:href="@{vollyball.html}" class="nav-link">Vollyball</a></li>
-              <li><a th:href="@{contact.html}" class="nav-link">Contact</a></li>
-            </ul>
-          </nav>
 
-          <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right text-white"><span
-                  class="icon-menu h3 text-white"></span></a>
-        </div>
       </div>
     </div>
 
@@ -76,60 +65,82 @@
   <div class="hero overlay" style="background-image: url('images/bg_3.jpg');">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-9 mx-auto text-center">
-          <h1 class="text-white">Contact</h1>
+        <div class="col-lg-5 ml-auto">
+          <h1 class="text-white">STS Admin Dashboard</h1>
+          <p id="date"></p>
         </div>
       </div>
     </div>
   </div>
 
 
-  <div class="site-section">
+  <div class="container">
+
+
+    <div class="row">
+      <div class="col-lg-12">
+
+        <div class="d-flex team-vs">
+          <div class="team-1 w-50">
+            <div class="team-details w-100 text-center">
+              <h3>Supports Tournament</h3>
+
+            </div>
+          </div>
+          <div class="team-2 w-50">
+            <div class="team-details w-100 text-center">
+              <h3>Schedule System</span></h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="site-section bg-dark">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-7">
-          <form action="#" th:action="@{/contact}" method="post" th:object="${user}">
-            <div class="form-group">
-              <input type="text" class="form-control" th:field="*{name}" placeholder="Name">
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" th:field="*{email}" placeholder="Email">
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" th:field="*{subject}"placeholder="Subject">
-            </div>
-            <div class="form-group">
-              <textarea name="" class="form-control" id="" cols="30" rows="10" th:field="*{message}" placeholder="Write something..."></textarea>
-            </div>
-            <div class="form-group">
-              <input type="submit" class="btn btn-primary py-3 px-5" value="Send Message">
-            </div>
-          </form>
-        </div>
-        <div class="col-lg-4 ml-auto">
+      <div class="col-12 title-section">
+        <h2 class="heading">Football Matches</h2>
+      </div>
 
-          <ul class="list-unstyled">
-            <li class="mb-2">
-              <strong class="text-white d-block">Address</strong>
-              273 South Riverview Rd. <br> New York, NY 10011
-            </li>
-            <li class="mb-2">
-              <strong class="text-white d-block">Email</strong>
-              <a href="#">info@unslate.co</a>
-            </li>
-            <li class="mb-2">
-              <strong class="text-white d-block">
-                Phone
-              </strong>
-              <a href="#">+12 345 6789 012</a>
-            </li>
-          </ul>
+      <div class="col-lg-12">
+        <div class="bg-light p-4 rounded">
+
+          <div class="widget-next-match">
+            <table class="table custom-table">
+              <thead>
+              <tr>
+                <th scope="col">Team A</th>
+                <th scope="col">Team B</th>
+                <th scope="col">Date</th>
+                <th scope="col">Time</th>
+                <th scope="col">Ground</th>
+                <th scope="col">League</th>
+                <th scope="col"> Action </th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr th:each="match: ${footballMatchs}">
+                <td th:text="${match.teamA}"/>
+                <td th:text="${match.teamB}"/>
+                <td th:text="${match.date}"/>
+                <td th:text="${match.time}"/>
+                <td th:text="${match.ground}"/>
+                <td th:text="${match.league}"/>
+                <td>
+                <td>
+                  <a th:href="@{/deletefootballmatch/{id}(id=${match.id})}" class="btn btn-primary py-3 px-5">Delete</a>
+                </td>
+                </form>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
-
+  </div> <!-- .site-section -->
   <footer class="footer-section" style="margin: 0px; padding: 0px;">
     <div class="bg-light p-4">
       <div class="container">
@@ -151,12 +162,23 @@
         </div>
       </div>
   </footer>
-
-
-
 </div>
+
 <!-- .site-wrap -->
 
+<script >
+window.onload = setInterval(clock,1000);
+function clock()
+{
+    var d = new Date();
+    var date = d.getDate();
+    var year = d.getFullYear();
+    var month = d.getMonth();
+    var monthArr = ["January", "February","March", "April", "May", "June", "July", "August", "September", "October", "November","December"];
+    month = monthArr[month];
+    document.getElementById("date").innerHTML="Current Date: "+date+" "+month+", "+year;
+}
+</script>
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/jquery-migrate-3.0.1.min.js"></script>
 <script src="js/jquery-ui.js"></script>
@@ -176,5 +198,6 @@
 <script src="js/main.js"></script>
 
 </body>
+
 
 </html>
